--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,29 @@
 
     <groupId>daily.practice</groupId>
     <artifactId>daily-practice</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>algorithms</module>
+    </modules>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <!-- Compiler 插件, 设定JDK版本 -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.6.0</version>
+                    <configuration>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                        <encoding>UTF-8</encoding>
+                        <showWarnings>true</showWarnings>
+                    </configuration>
+                </plugin>
 
-    
+            </plugins>
+        </pluginManagement>
+    </build>
+
 </project>
