--- a/practice-web-pc/src/main/webapp/WEB-INF/web.xml
+++ b/practice-web-pc/src/main/webapp/WEB-INF/web.xml
@@ -22,22 +22,22 @@
     </context-param>
 
     <!-- CharacterEncoding -->
-    <!--<filter>-->
-        <!--<filter-name>CharacterEncodingFilter</filter-name>-->
-        <!--<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>-->
-        <!--<init-param>-->
-            <!--<param-name>encoding</param-name>-->
-            <!--<param-value>UTF-8</param-value>-->
-        <!--</init-param>-->
-        <!--<init-param>-->
-            <!--<param-name>forceEncoding</param-name>-->
-            <!--<param-value>true</param-value>-->
-        <!--</init-param>-->
-    <!--</filter>-->
-    <!--<filter-mapping>-->
-        <!--<filter-name>CharacterEncodingFilter</filter-name>-->
-        <!--<url-pattern>/*</url-pattern>-->
-    <!--</filter-mapping>-->
+    <filter>
+        <filter-name>CharacterEncodingFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceEncoding</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>CharacterEncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <!-- Http请求 -->
     <servlet>
@@ -56,9 +56,9 @@
     </servlet-mapping>
 
     <!-- Error Page List -->
-    <!--<error-page>-->
-        <!--<error-code>404</error-code>-->
-        <!--<location>/</location>-->
-    <!--</error-page>-->
+    <error-page>
+        <error-code>404</error-code>
+        <location>/</location>
+    </error-page>
 
 </web-app>
